# weather-apis

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TESTING.md  celerybeat-schedule  coverage.xml  docker-compose.monitoring.yml  openapi.json  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schema.yml  settings.json
.github/workflows/: ci.yml  codeql.yml
accounts/: README.md  __init__.py  auth_backends.py  serializers.py  urls.py  views.py
api_keys/: README.md  __init__.py  apps.py  auth.py  authentication.py  models.py  openapi.py  permissions.py  serializers.py  throttling.py  urls.py  views.py
api_keys/migrations/: 0001_initial.py  0002_apikey_scope_last_used_at.py  0003_rename_api_keys_user_revoked_expires_idx_api_keys_ap_user_id_af1bd6_idx.py  __init__.py
config/: celery.py  mypy_settings.py  settings.py  urls.py  views.py
config/api/: __init__.py  exceptions.py  openapi.py  responses.py
docs/: HMAC_INTEGRATION_SPEC.md  contributing_ndvi_engines.md  contributing_weather_engines.md  devops.md  hmac_audit.md  hmac_clean_setup.md  integration_auth.md  monitoring.md  reverse-proxy.md
docs/accounts/: password-reset.md
docs/security/: nextcloud-hmac-runbook.md  nextcloud-hmac.md
farms/: README.md  models.py  permissions.py  serializers.py  urls.py  views.py
farms/migrations/: 0001_initial.py
farms/tests/: test_farms_api.py  test_farms_unit.py
integrations/: __init__.py  authentication.py  config.py  hmac.py  models.py  permissions.py  serializers.py  throttling.py  tokens.py  urls.py  views.py
integrations/management/commands/: integrations_generate_hmac_client.py
integrations/migrations/: 0001_initial.py
integrations/tests/: test_integration_authentication.py  test_integration_clients.py  test_integration_config.py  test_integration_management_command.py  test_integration_ping.py  test_integration_throttling.py  test_integration_token.py
monitoring/grafana/dashboards/: weather-apis-observability.json
monitoring/loki/: loki.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yml
ndvi/: README.md  apps.py  metrics.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
ndvi/engines/: base.py  sentinelhub.py
ndvi/migrations/: 0001_initial.py  0002_ndvirasterartifact.py  0003_rename_ndvi_ndvir_owner_id_5f4203_idx_ndvi_ndvira_owner_i_adcf1f_idx_and_more.py
ndvi/raster/: base.py  registry.py  sentinelhub_engine.py  service.py  stac_compute_engine.py
ndvi/tests/: fakes.py  test_ndvi.py  test_ndvi_raster_engines.py  test_ndvi_raster_png.py  test_ndvi_sentinelhub_engine.py  test_ndvi_services.py  test_ndvi_tasks_extra.py
reports/: 2025-12-17.md  2025-12-17.mdmkdir  2025-12-18.md  2025-12-19.md  2025-12-20.md  2025-12-22.md  2025-12-23.md  2025-12-25.md  2025-12-26.md  2025-12-30.md  2025-12-31.md  2026-01-01.md  2026-01-01.mde  2026-01-03.md  2026-01-06.md  2026-01-07.md  2026-01-08.md
tests/: test_accounts.py  test_api_keys.py  test_config_api.py  test_entrypoints.py  test_integrations_nextcloud_hmac.py
tests/fixtures/: hmac_test_vector.json
tools/: nc_smoke.sh
weather/: README.md  __init__.py  apps.py  metrics.py  serializers.py  services.py  timeutils.py  urls.py  views.py
weather/engines/: __init__.py  base.py  nasa_power.py  open_meteo.py  registry.py  types.py
weather/tests/: __init__.py  test_timeutils.py  test_weather.py  test_weather_api.py
