[project]
name = "weather-apis"
version = "0.1.0"
description = "Backend-only Django/DRF service for Weather APIs (NASA, Meteo, OpenWeather)."
requires-python = ">=3.11"
dependencies = [
  "Django>=5.1,<5.2",
  "djangorestframework>=3.15,<3.16",
  "drf-spectacular>=0.27,<0.28",
  "httpx>=0.27,<0.28",
  "python-dotenv>=1.0,<2.0",
]

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ANN"]
ignore = ["ANN101", "ANN102"]
exclude = ["migrations"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true

[tool.bandit]
skips = ["B101"]  # ok to skip assert checks in tests/etc if you want
exclude_dirs = [
    ".venv",
    "venv",
    "migrations",
    "node_modules",
    ".git",
]
severity = "MEDIUM"
confidence = "HIGH"



